[project]
name = "pypelined"
version = "0.1.0"
description = "pypelined"
readme = "README.md"
authors = [{ name = "Shinya Sasaki", email = "shinya.sasaki@kek.jp" }]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "janus>=2.0.0",
    "lark>=1.2.2",
    "pyepics>=3.5.7",
    "pyyaml>=6.0.2",
    "zabbix-utils[async]>=2.0.2",
]

[project.scripts]
pypelined = "pypelined.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5"]
