[project]
name = "cauliflow"
version = "0.1.0"
description = "A simple workflow tool designed to work with EPICS PVs"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Shinya Sasaki", email = "shinya.sasaki@kek.jp" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "aioca>=1.8.1",
    "aiofiles>=24.1.0",
    "click>=8.1.8",
    "janus>=2.0.0",
    "lark>=1.2.2",
    "pyyaml>=6.0.2",
    "zabbix-utils[async]>=2.0.2",
]

[project.urls]
Documentation = "https://sasaki77.github.io/cauliflow/"
Source = "https://github.com/sasaki77/cauliflow/"

[project.scripts]
cauliflow = "cauliflow.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "tox>=4.26.0",
    "tox-uv>=1.25.0",
]
docs = [
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-mermaid>=1.0.0",
]

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["3.12"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
deps = ["pytest>=8", "pytest-asyncio"]
commands = [["pytest"]]
